Archive2/85/16f88acad53ae8/output
clang version 3.5 (trunk 198621)
Target: x86_64-unknown-linux-gnu
Thread model: posix
main.cpp:32:20: error: constexpr variable 'x6' must be initialized by a constant expression
    constexpr auto x6 = sqrt<float>(-1);
                   ^    ~~~~~~~~~~~~~~~
main.cpp:17:16: note: subexpression not valid in a constant expression
  if (a < T()) throw std::invalid_argument("");
               ^
main.cpp:32:25: note: in call to 'sqrt(-1.000000e+00, 1.000000e-15)'
    constexpr auto x6 = sqrt<float>(-1);
                        ^
1 error generated.
